# Littlefoot-Subnet

./: .gitignore  CRITICAL_ANALYSIS.md  Dockerfile  README.md  WHITEPAPER.md  __init__.py  carbon_intensity.py  docker-compose.yml  env.example  geolocation-attestation-tools.md  littlefoot-convo.txt  location_verification.py  pyproject.toml  safety-overlay-subnet-whitepaper.md  subnet_weights.py  subnets-to-research  validator.py
docs/: dao-research.md  mechanism-weighting.md  rtt-geolocation-assessment.md  subnet-owner-interview-questions.md
scripts/pricing/: README.md  fetch_pricing.py  latitude_locations.json
scripts/pricing/.cache/: ember_latest_co2_intensity.json
